--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,16 @@
+server:
+  port : 8099
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shop?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
     password: Wjdals12#
     driver-class-name: com.mysql.cj.jdbc.Driver
+  #swagger setting
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
   jpa:
     hibernate:
