--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,14 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	//model mapper
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+	//MapStruct
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	//p6spy 파리미터 로그 라이브러리
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
+	//log4j
+	implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
 }
 
 tasks.named('test') {
