--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,14 +13,17 @@ spring:
       matching-strategy: ant_path_matcher
 
   jpa:
+    show-sql: false
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-#        show_sql: true
         format_sql: true
+
 
 logging:
   level:
+    root: info
     org.hibernate.SQL: debug
     org.hibernate.type: trace
+
