--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok' // 테스트 의존성 추가
 	testAnnotationProcessor 'org.projectlombok:lombok' // 테스트 의존성 추가
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
@@ -45,6 +50,11 @@ dependencies {
 	//log4j
 	implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
 	implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 }
 
 tasks.named('test') {
