--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,24 @@
 server:
   port : 8099
 
+
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shop?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
     password: Wjdals12#
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  #jwt
+  jwt:
+    secret: oisadfjhvoasihjrdgoiahw34oihnoawedhnvoaijksd
+
+  #redis
+  redis:
+    host: localhost
+    port: 6379
+
   #swagger setting
   mvc:
     pathmatch:
@@ -15,7 +27,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
