--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 	//webSocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+	//aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
 }
 
